# qxkb

./: CMakeLists.txt  Makefile  NEWS  QXKB.pro  README
branches/qxkb-0.4.3-1/: CMakeLists.txt  README
branches/qxkb-0.4.5-1/language/: qxkb_sr.ts
branches/qxkb-0.4.5-1/src/: qxkb.h  qxkbxwindow.h  qxtglobalshortcut.cpp
debian/: copyright
desktop/: qxkb.desktop
language/: qxkb_ru.qm  qxkb_ru.ts  qxkb_sr.ts
qrc/: icon.qrc
src/: about.h  convert.cpp  datamodels.cpp  datamodels.h  defs.h  keyswitch.cpp  keyswitch.h  main.cpp  qxkb.cpp  qxkb.h  qxkbxwindow.cpp  qxkbxwindow.h  qxtglobal.h  qxtglobalshortcut.h  qxtglobalshortcut_x11.cpp  x11tools.cpp  x11tools.h  xkbconf.cpp  xkbconf.h  xkeyboard.cpp  xkeyboard.h
tags/qxkb-0.4.3/: QXKB.pro
tags/qxkb-0.4.3/language/: qxkb_ru.ts
tags/qxkb-0.4.3/src/: x11tools.cpp  xkbconf.h
tags/qxkb-0.4.3/ui/: kswconfig.ui
tags/qxkb-0.4.5/: CMakeLists.txt
tags/qxkb-0.4.5/debian/: changelog
tags/qxkb-0.4.5/src/: datamodels.cpp  datamodels.h  main.cpp  qxtglobalshortcut.h  xkbconf.cpp  xkbconf.h  xkeyboard.h
tags/qxkb-0.4.5/trunk/qrc/: icon.qrc
tags/qxkb-0.4.5/trunk/src/: convert.cpp  keyswitch.cpp  main.cpp
tags/qxkb-0.4.6/: NEWS
tags/qxkb-0.4.6/language/: qxkb_ru.ts
tags/qxkb-0.4.6/src/: convert.h  defs.h  qxkb.cpp  xkbconf.h
trunk/: CMakeLists.txt  QXKB.pro  README
trunk/debian/: changelog  control
trunk/desktop/: qxkb.desktop
trunk/language/: qxkb_ru.ts
trunk/src/: about.cpp  convert.cpp  convert.h  datamodels.cpp  datamodels.h  defs.h  keyswitch.cpp  keyswitch.h  qxkb.cpp  qxkb.h  qxtglobalshortcut.cpp  qxtglobalshortcut_p.h  x11tools.cpp  x11tools.h  xkbconf.cpp  xkbconf.h  xkeyboard.cpp  xkeyboard.h
trunk/theme/default/language/: group_names
trunk/ui/: kswconfig.ui
ui/: about.ui  kswconfig.ui
