PROJECT(qxkb)
set (SOURCES src/qxkb.cpp src/xkeyboard.cpp src/xkbconf.cpp src/x11tools.cpp src/main.cpp src/datamodels.cpp src/about.cpp)
set (HEADERS src/qxkb.h src/xkeyboard.h src/xkbconf.h src/x11tools.h src/datamodels.h src/defs.h src/about.h)
set (FORMS ui/kswconfig.ui ui/about.ui)
SET(RESOURCES qrc/icon.qrc)
set (DESTDIR bin)
set (OBJECTS_DIR  build)
set (MOC_DIR build)
set (QMAKE_INCDIR /usr/include)
set (QMAKE_CLEAN qxkb)
set (CONFIG warn_on release)
set (LIBS -lxkbfile)
SET(TRANSLATIONS language/qxkb_ru.ts)
SET(VERSION 0.4.3-pre)
ADD_EXECUTABLE(qxkb qxkb_sources)
